--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <iframe
       style="border: 1px solid #777"
       src="https://indd.adobe.com/embed/108240fb-53db-4b8a-b395-02ea3370abd2?startpage=1&allowFullscreen=false"
-      width="650px"
-      height="460px"
+      width="100%"
       frameborder="0"
       allowfullscreen=""
     ></iframe>
