--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       style="border: 1px solid #777"
       src="https://indd.adobe.com/embed/108240fb-53db-4b8a-b395-02ea3370abd2?startpage=1&allowFullscreen=false"
       width="100%"
+      height="80vh"
       frameborder="0"
       allowfullscreen=""
     ></iframe>
