--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body>
     우리가 되는 방법들
     <iframe
-      style="border: 1px solid #777"
+      style="border: 1px solid #777; height: 80vh;"
       src="https://indd.adobe.com/embed/108240fb-53db-4b8a-b395-02ea3370abd2?startpage=1&allowFullscreen=false"
       width="100%"
-      height="80vh"
       frameborder="0"
       allowfullscreen=""
     ></iframe>
