--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <title>우리가 되는 방법들</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="/js/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    우리가 되는 방법들
-    <iframe
-      style="border: 1px solid #777; height: 80vh;"
-      src="https://indd.adobe.com/embed/108240fb-53db-4b8a-b395-02ea3370abd2?startpage=1&allowFullscreen=false"
-      width="100%"
-      frameborder="0"
-      allowfullscreen=""
-    ></iframe>
-    <script src="" async defer></script>
+    img
+    <script src="/js/javascript.js" async defer></script>
   </body>
 </html>
