--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.svg" />
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2" />
     <link rel="manifest" href="manifest.json" />
 
     <meta name="description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
