--- a/index.html
+++ b/index.html
@@ -29,71 +29,71 @@
       <div class="nav" id="nav">
         <ul class="menu">
           <li class="f-list">
-            <span class="ko" data-page-number="4">인사</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="4">인사</span>
+            <span class="en hidden" data-pageNumber=""></span>
           </li>
           <li class="f-list">
-            <span class="ko" data-page-number="9">우리가 되는 방법들</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="9">우리가 되는 방법들</span>
+            <span class="en hidden" data-pageNumber=""></span>
             <ul>
               <li class="s-list">
-                <span class="ko" data-page-number="9">기획의 글</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="9">기획의 글</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
               <li class="s-list">
-                <span class="ko" data-page-number="15">워크숍 소개</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="15">워크숍 소개</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
               <li class="s-list">
-                <span class="ko" data-page-number="56">대화</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="56">대화</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
             </ul>
           </li>
           <li class="f-list">
-            <span class="ko" data-page-number="65">줌-인</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="65">줌-인</span>
+            <span class="en hidden" data-pageNumber=""></span>
             <ul>
               <li class="s-list">
-                <span class="ko" data-page-number="65">개인 글쓰기</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="65">개인 글쓰기</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
               <li class="s-list">
-                <span class="ko" data-page-number="83">릴레이 글쓰기</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="83">릴레이 글쓰기</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
             </ul>
           </li>
           <li class="f-list">
-            <span class="ko" data-page-number="92">줌-아웃</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="92">줌-아웃</span>
+            <span class="en hidden" data-pageNumber=""></span>
             <ul>
               <li class="s-list">
-                <span class="ko" data-page-number="92">기록의 글</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="92">기록의 글</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
               <li class="s-list">
-                <span class="ko" data-page-number="99">홍수의 흔적</span>
-                <span class="en hidden" data-page-number=""></span>
+                <span class="ko" data-pageNumber="99">홍수의 흔적</span>
+                <span class="en hidden" data-pageNumber=""></span>
               </li>
             </ul>
           </li>
           <li class="f-list">
-            <span class="ko" data-page-number="102">참여자 소개</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="102">참여자 소개</span>
+            <span class="en hidden" data-pageNumber=""></span>
           </li>
           <li class="f-list">
-            <span class="ko" data-page-number="104">콜로폰</span>
-            <span class="en hidden" data-page-number=""></span>
+            <span class="ko" data-pageNumber="104">콜로폰</span>
+            <span class="en hidden" data-pageNumber=""></span>
           </li>
           <li class="f-list links">
-            <span class="ko" data-page-number="0">LANGUAGE</span>
-            <span class="en hidden" data-page-number="0">언어</span>
+            <span class="ko" data-pageNumber="0">LANGUAGE</span>
+            <span class="en hidden" data-pageNumber="0">언어</span>
           </li>
           <li class="f-list links">
             <a href="http://www.busanbiennale2022.org/learn/curatorial-workshop" target="_blank">
-              <span class="ko">2022부산비엔날레</span>
-              <span class="en hidden">Busan Biennale 2022</span>
+              <span class="ko" data-pageNumber="0">2022부산비엔날레</span>
+              <span class="en hidden" data-pageNumber="0">Busan Biennale 2022</span>
             </a>
           </li>
         </ul>
