search bar move

--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
             </a>
           </li>
         </ul>
-        <div class="search">
-          <input type="number" name="" id="search-number" onfocus="this.select()" value="0" />page
-          <span id="search-btn" class="ko">이동</span>
-          <span id="search-btn" class="en hidden">GO</span>
-        </div>
       </div>
-
+      <div class="search" id="search">
+        <input type="number" name="" id="search-number" onfocus="this.select()" value="0" />page
+        <span id="search-btn" class="ko">이동</span>
+        <span id="search-btn" class="en hidden">GO</span>
+      </div>
       <div class="nav-btn" id="nav-btn">
         <img src="/menu.svg" alt="" />
       </div>
