--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>우리가 되는 방법들</title>
+    <title>우리가 되는 방법들 WAYS TO MAKE US</title>
+    <meta name="description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
     <link rel="icon" href="favicon.svg" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2" />
     <link rel="manifest" href="manifest.json" />
 
-    <meta name="description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
+    <meta property="og:title" content="우리가 되는 방법들" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://busanbiennale2022.curatorialworkshop.org/" />
+    <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/title.png" />
+    <meta property="og:description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/normalize.css" />
