--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
   <body>
     <div class="wrapper" id="wrapper">
       <div class="control">
-        <div class="lang" id="prev" data-lang="ko"></div>
-        <div class="lang" id="next" data-lang="en"></div>
+        <div class="lang" id="prev" data-lang="ko">
+          <svg class="arrow" width="512px" height="512px" viewBox="-78.5 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path d="M257 64L291 98 128 262 291 426 257 460 61 262 257 64Z" />
+          </svg>
+        </div>
+        <div class="lang" id="next" data-lang="en">
+          <svg class="arrow" width="512px" height="512px" viewBox="-77 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path d="M98 460L64 426 227 262 64 98 98 64 294 262 98 460Z" />
+          </svg>
+        </div>
       </div>
 
       <div class="viewer">
