--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="우리가 되는 방법들" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://busanbiennale2022.curatorialworkshop.org/" />
-    <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/title.png" />
+    <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/title-2.png" />
     <meta property="og:description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
