--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="viewer">
-        <img id="page" src="/pages/US0.webp" alt="" />
+        <img id="page" src="/pages/ko/K0.webp" alt="" />
       </div>
 
       <div class="nav-back" id="nav-back"></div>
