--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://busanbiennale2022.curatorialworkshop.org/" />
     <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/title-3.png" />
     <meta property="og:description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
+    <meta name="theme-color" content="#000000">
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/normalize.css" />
