--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
       <div class="viewer">
         <img id="page" src="/pages/ko/K0.webp" alt="" />
-        <div class="ex-link hidden" id="ex-link"></div>
+        <div class="ex-link hidden" id="ex-link">
+          <a href="" target="_blank" rel="noopener noreferrer"></a>
+        </div>
       </div>
 
       <div class="nav-back" id="nav-back"></div>
