add pages, valid page number

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       <div class="nav-btn" id="nav-btn">
         <img src="/menu.svg" alt="" />
       </div>
+      <div class="page-number"><span id="current-page"></span> <span id="last-page"></span></div>
     </div>
 
     <script src="/js/javascript.js" async defer></script>
