add assets folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="우리가 되는 방법들" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://busanbiennale2022.curatorialworkshop.org/" />
-    <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/title-3.png" />
+    <meta property="og:image" content="https://busanbiennale2022.curatorialworkshop.org/assets/title-3.png" />
     <meta property="og:description" content="「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다." />
     <meta name="theme-color" content="#000000" />
 
@@ -123,7 +123,7 @@
         </span>
       </div>
       <div class="nav-btn" id="nav-btn">
-        <img src="/menu.svg" alt="" />
+        <img src="/assets/menu.svg" alt="" />
       </div>
       <div class="page-number"><span id="current-page"></span> <span id="last-page"></span></div>
     </div>
